// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend GIVEN error status WHEN google api responds THEN response with error is sent via socker 1`] = `
Object {
  "details": "Error occurred in one or more of the service calls to Google Distance Matrix API",
  "error": "Error retrieving driving time, check console.",
  "lastUpdate": Any<Number>,
}
`;

exports[`Backend GIVEN invalid request WHEN response is failed THEN response with error is sent via socker 1`] = `
Object {
  "details": "Array of departureTimes is not valid. Maybe it is undefined, null or empty?",
  "error": "Error retrieving driving time, check console.",
  "lastUpdate": Any<Number>,
}
`;

exports[`Backend GIVEN undefined data WHEN google api responds THEN response with error is sent via socker 1`] = `
Object {
  "details": "Data returned from Google Distance Matrix Service where undefined.",
  "error": "Error retrieving driving time, check console.",
  "lastUpdate": Any<Number>,
}
`;

exports[`Backend GIVEN valid request WHEN response is successful THEN response is sent via socket 1`] = `
Object {
  "drivingTime": Object {
    "destination": "Gøteborggata 32, 0566 Oslo, Norge",
    "distance": Object {
      "description": "203 km",
      "inMeter": 203466,
    },
    "drivingDepartures": Array [
      Object {
        "departureTime": Any<Date>,
        "durationDiff": Object {
          "description": "-12 min",
          "inSeconds": -718,
        },
        "durationInTraffic": Object {
          "description": "2 timer 48 min",
          "inSeconds": 10064,
        },
      },
    ],
    "duration": Object {
      "description": "3 timer 0 min",
      "inSeconds": 10782,
    },
    "origin": "Hemsilbreidda 16, 3560 Hemsedal, Norge",
  },
  "lastUpdate": Any<Number>,
}
`;
